[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/character/Old_Character.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/DroidSansChinese.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.223529, 0.223529, 0.223529, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0.2, 0.2, 0.2, 1 )
font_data = ExtResource( 2 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Body" type="KinematicBody2D" parent="."]

[node name="shadow" type="Sprite" parent="Body"]

[node name="body" type="Sprite" parent="Body"]

[node name="weapon" type="Sprite" parent="Body"]

[node name="nameLabel" type="Label" parent="Body"]
margin_left = 0.561218
margin_top = -167.059
margin_right = 48.5612
margin_bottom = -150.059
custom_fonts/font = SubResource( 1 )
text = "花也才"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvLabel" type="Label" parent="Body"]
margin_left = -39.0
margin_top = -165.0
margin_right = -1.0
margin_bottom = -148.0
custom_fonts/font = SubResource( 2 )
text = "Lv.10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effect" type="Sprite" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="MainPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Double_Click_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Combo_Timer" type="Timer" parent="."]
one_shot = true

[node name="soundPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="timeout" from="Double_Click_Timer" to="." method="_on_Double_Click_Timer_timeout"]
[connection signal="timeout" from="Combo_Timer" to="." method="_on_Combo_Timer_timeout"]
